--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,9 +4,9 @@
   /*max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  font-weight: normal;
+  font-weight: normal;*/
   width: 100%;
-  height: 100%;*/
+  height: 100%;
   padding: 0;
 }
 
